Correct user table alignment

--- a/mtp_common/assets-src/stylesheets/elements/_account-management.scss
+++ b/mtp_common/assets-src/stylesheets/elements/_account-management.scss
@@ -37,6 +37,10 @@
   }
 }
 
+table.mtp-table.mtp-account-management__users td {
+  padding-left: 1.25em;
+}
+
 .mtp-account-management__request_date, .mtp-account-management__is_manager {
   width: 11em;
 }
